src/styles/post.less
 @import "variables.less";
@import "mixins.less";

// Global Components

body {
	.serif-font;
	font-size: 20px;
	color: @gray-dark;
}

// Typography

p {
	line-height: 1.5;
	margin: 30px 0;
	a {
		text-decoration: underline;
	}
}

h1,
h2,
h3,
h4,
h5,
h6 {
	.sans-serif-font;
	font-weight: 800;
}

a {
	color: @gray-dark;
	&:hover,
	&:focus {
		color: @theme-primary;
	}
}

a img {
	&:hover,
	&:focus {
		cursor: zoom-in;
	}
}

blockquote {
	color: @gray-light;
	font-style: italic;
}

hr.small {
	max-width: 100px;
	margin: 15px auto;
	border-width: 4px;
	border-color: white;
}

// Navigation

.navbar-custom {
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	z-index: 3;
	.sans-serif-font;
	.navbar-brand {
		font-weight: 400;
        font-size: 15px;
	}
	.navbar-header {
		.navbar-toggle {
			color: @gray-light;
			font-weight: 800;
			text-transform: uppercase;
			font-size: 12px;
		}
	}
	.nav {
		li {
			a {
				text-transform: uppercase;
				font-size: 12px;
				font-weight: 800;
				letter-spacing: 1px;
			}
		}
	}
}

// Header

.intro-header {
    margin-top: 50px;
    .container {
        width: 100%;
    }
	background-color: @gray-light; 
	background: no-repeat center center; 
	background-attachment: scroll;
	.background-cover;
    // NOTE: Background images are set within the HTML using inline CSS!
	margin-bottom: 50px;
	.site-heading,
	.page-heading {
		text-align: center;
        padding: 250px 0 250px;
        color: white;
        .title {
            width: 40%;
            margin-left: 10%;
		    h1 {
			    margin-top: 0;
			    font-size: 3vw;
		    }
		    .subheading {
			    font-size: 1.1vw;
			    line-height: 1.1;
			    display: block;
			    .sans-serif-font;
			    font-weight: 300;
			    margin: 10px 0 0;
		    }
        }
       .title-padding();
       .title {
           width: 55%;
           margin-left: 2%;
           h1 {
               margin-top: 0;
               font-size: 4.5vw;
           }
           .subheading {
               font-size: 1.85vw;
               line-height: 1.1;
               display: block;
               .sans-serif-font;
               font-weight: 300;
               margin: 10px 0 0;
           }
       } 
	}
	.post-heading {
		h1 {
			font-size: 35px;
		}
		.subheading,
		.meta {
			line-height: 1.1;
			display: block;
		}
		.subheading {
			.sans-serif-font;
			font-size: 24px;
			margin: 10px 0 30px;
			font-weight: 600;
		}
		.meta {
			.serif-font;
			font-style: italic;
			font-weight: 300;
			font-size: 20px;
			a {
				color: white;
			}
		}
		@media only screen and (min-width: 768px) {
			h1 {
				font-size: 55px;
			}
			.subheading {
				font-size: 30px;
			}
		}
	}
}

// Post Preview Pages

.post-preview {
	> a {
		color: @gray-dark;
		&:hover,
		&:focus {
			text-decoration: none;
			color: @theme-primary;
		}
		> .post-title {
			font-size: 30px;
			margin-top: 30px;
			margin-bottom: 10px;
		}
		> .post-subtitle {
			margin: 0;
			font-weight: 300;
			margin-bottom: 10px;
		}
	}
	> .post-meta {
		color: @gray-light;
		font-size: 18px;
		font-style: italic;
		margin-top: 0;
		> a {
			text-decoration: none;
			color: @gray-dark;
			&:hover,
			&:focus {
				color: @theme-primary;
				text-decoration: underline;
			}
		}
	}
	@media only screen and (min-width: 768px) {
		> a {
			> .post-title {
				font-size: 36px;
			}
		}
	}
}

// Sections

.section-heading {
	font-size: 36px;
	margin-top: 60px;
	font-weight: 700;
}

.caption {
	text-align: center;
	font-size: 14px;
	padding: 10px;
	font-style: italic;
	margin: 0;
	display: block;
	border-bottom-right-radius: 5px;
	border-bottom-left-radius: 5px;
}

footer {
	padding: 50px 0 65px;
	.list-inline {
		margin: 0;
		padding: 0;
	}
	.copyright {
		font-size: 14px;
		text-align: center;
		margin-bottom: 0;
	}
}

// Contact Form Styles

.floating-label-form-group {
	font-size: 14px;
	position: relative;
	margin-bottom: 0;
	padding-bottom: 0.5em;
	border-bottom: 1px solid @gray-lighter;
	input,
	textarea {
		z-index: 1;
		position: relative;
		padding-right: 0;
		padding-left: 0;
		border: none;
		border-radius: 0;
		font-size: 1.5em;
		background: none;
		box-shadow: none !important;
		resize: none;
	}
	label {
		display: block;
		z-index: 0;
		position: relative;
		top: 2em;
		margin: 0;
		font-size: 0.85em;
		line-height: 1.764705882em;
		vertical-align: middle;
		vertical-align: baseline;
		opacity: 0;
		-webkit-transition: top 0.3s ease,opacity 0.3s ease;
		-moz-transition: top 0.3s ease,opacity 0.3s ease;
		-ms-transition: top 0.3s ease,opacity 0.3s ease;
		transition: top 0.3s ease,opacity 0.3s ease;
	}
	&::not(:first-child) {
		padding-left: 14px;
		border-left: 1px solid @gray-lighter;
	}
}

.floating-label-form-group-with-value {
	label {
		top: 0;
		opacity: 1;
	}
}

.floating-label-form-group-with-focus {
	label {
		color: @theme-primary;
	}
}

form .row:first-child .floating-label-form-group {
	border-top: 1px solid @gray-lighter;
}

// Button Styles

.btn {
	.sans-serif-font;
	text-transform: uppercase;
	font-size: 14px;
	font-weight: 800;
	letter-spacing: 1px;
	border-radius: 0;
	padding: 15px 25px;
}

.btn-lg {
	font-size: 16px;
	padding: 25px 35px;
}

.btn-default {
	&:hover,
	&:focus {
		background-color: @theme-primary;
		border: 1px solid @theme-primary;
		color: white;
	}
}

// Pager Styling

.pager {

	margin: 20px 0 0;

	li {
		> a,
		> span {
			.sans-serif-font;
			text-transform: uppercase;
			font-size: 14px;
			font-weight: 800;
			letter-spacing: 1px;
			padding: 15px 25px;
			background-color: white;
			border-radius: 0;
		}

		> a:hover,
		> a:focus {
			color: white;
			background-color: @theme-primary;
			border: 1px solid @theme-primary;
		}
	}

	.disabled {
		> a,
		> a:hover,
		> a:focus,
		> span {
			color: @gray-light;
			background-color: @gray-dark;
			cursor: not-allowed;
		}
	}
}

// Highlight Color Customization

::-moz-selection {
	color: white;
	text-shadow: none;
	background: @theme-primary;
}

::selection {
	color: white;
	text-shadow: none;
	background: @theme-primary;
}

img::selection {
	color: white;
	background: transparent;
}

img::-moz-selection {
	color: white;
	background: transparent;
}

body {
	-webkit-tap-highlight-color: @theme-primary;
}

